started add post with swagger need to fix also logout need to add picture to post
