# app/models/post.py
@@ -9,6 +9,20 @@ class PostType(PyEnum):
     MANGA = "MANGA"
 
 class Post(db.Model):
+    """
+    Represents a post in the system.
+
+    Attributes:
+        id (int): Identifier number of the user.
+        title (str): The title chosen by the user.
+        post_type (str): The type of the post (Illustration/Manga/Novel).
+        caption (str): The caption of the post.
+        description (str): Decription of the post.
+        is_spoilered (bool): Condition if the post is spoilered.
+        software (str): The software the post was created in.
+        created_at : Creation date of the post.
+    """
+        
     __tablename__ = "posts"
 
     id :int = db.Column(db.Integer, primary_key=True)
