# app/routes/auth_routes.py
@@ -51,15 +51,9 @@ def login():
 @auth_bp.route("/logout", methods=["POST"])
 def logout():
     """
-    Route to authenticate a user and return a token.
+    Route to logout a user.
 
-    Required fields: email, password
     """
-    data = request.get_json()
-
-    if not all(key in data for key in ["email", "password"]):
-        return jsonify({"error": "Missing required fields"}), 400
-
-    response, status_code = AuthService.authenticate_user(data)
+    # logout_user()
     
-    return jsonify(response), status_code
+    return jsonify({"message": "Logged out successfully"}), 200
